change recommedation algorithm with weight, add crud operation for user,answer,question,... finish auth with jwt feature